Register reset accelerator at accelerator controller

- Register reset accelerator at global accelerator manager (accelerator
  controller) to make it work while system tray is open.
- Close system tray by WebuiLoginView when reset accelerator is
  performed.

Bug: 774425
Test: Open system tray at login screen, and press Ctrl+Alt+Shift+R.
Change-Id: I642a6ceee04b721427c9ee7116c78e0f2163b40d
      Confirm that reset screen is shown.